--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -23,4 +23,7 @@
     <preference name="Orientation" value="portrait" />
     <preference name="DisallowOverscroll" value="true" />
     <preference name="StatusBarOverlaysWebView" value="true" />
+    <feature name="Game">
+        <param name="android-package" value="com.cranberrygame.phonegap.plugin.Game" />
+    </feature>
 </widget>
