--- a/platforms/android/assets/www/css/main.css
+++ b/platforms/android/assets/www/css/main.css
@@ -8,7 +8,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'), url(roboto-light.woff) format('woff');
+  src: local('Roboto Light'), local('Roboto-Light'), url(../fonts/roboto-light.woff) format('woff');
 }
 
 * {
