--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -10,6 +10,12 @@
     <feature name="Notification">
         <param name="android-package" value="org.apache.cordova.dialogs.Notification" />
     </feature>
+    <feature name="Game">
+        <param name="android-package" value="com.cranberrygame.phonegap.plugin.Game" />
+    </feature>
+    <feature name="ChromeStorage">
+        <param name="android-package" value="org.chromium.ChromeStorage" />
+    </feature>
     <name>RGBChallenge</name>
     <description>
         Can you match the colors just based on the RGB values?
@@ -23,10 +29,5 @@
     <preference name="Orientation" value="portrait" />
     <preference name="DisallowOverscroll" value="true" />
     <preference name="StatusBarOverlaysWebView" value="true" />
-    <feature name="Game">
-        <param name="android-package" value="com.cranberrygame.phonegap.plugin.Game" />
-    </feature>
-    <feature name="ChromeStorage">
-        <param name="android-package" value="org.chromium.ChromeStorage" />
-    </feature>
+    <preference name="BackupWebStorage" value="none" />
 </widget>
